<resources>
    <string name="app_name">Autosalon_Bashkirov</string>
    <string name="uslugi">Услуги</string>
    <string name="contact">Контакты</string>
    <string name="car">Автомобили</string>
    <string name="news">Новости</string>
    <string name="text_one">Наш автосалон работает с 2023 года и радует наших клиентов хорошими и качественными автомобилями!</string>
    <string name="text_two">Новые двери открываются именно для Вас! Получите опыт роскошного автомобиля.</string>
    <string name="text_three">Официальный дилер BMW! Пылающая страсть к качеству.</string>
    <string name="logout">Выход</string>
    <string name="create_account">Создать аккаунт?</string>
    <string name="buttonAuth">Авторизация</string>
    <string name="uslugione">Услуги</string>
    <string name="acsessuary">Аксессуары</string>
    <string name="zapchasti">Запчасти</string>
    <string name="texOsmotr">Технический осмотр</string>
    <string name="remont">Ремонт</string>
    <string name="acsessuaryCpec">Аксессуары</string>
    <string name="acsessuaryone">Аксессуары</string>
    <string name="alltovary">Здесь Вы увидите все имеющиеся товары</string>
    <string name="collectionAcsessuary">Коллекционные аксессуары</string>
    <string name="zapchastyone">Запчасти</string>
    <string name="superiore">РемКомплект КПП (5 ступ.) полный с конич. подшип. SUPERIORE.</string>
    <string name="remka_kpp">Ремонтные комплекты КПП</string>
    <string name="opisanie_akk">12V 75AH 680A 258х174, 5х223 о.п.</string>
    <string name="acuum">Аккумулятор</string>
    <string name="podushka_cost">Подушка-косточка на подголовник</string>
    <string name="podushka_opisanie">Подушка способствует правильной осанке за рулем и снижает нагрузку с шейного отдела позвоночника.</string>
    <string name="aromatizator">Ароматизатор подвесной пластиковый "Истребитель" черный</string>
    <string name="texosmotropisa">Техосмотр нужен для того, чтобы понять, насколько безопасна машина. На осмотре специалисты выявляют неисправности автомобиля, которые водитель сможет вовремя устранить.</string>
    <string name="tozapis">Если Вы желаете запитьсать на технический осмотр Вашего транспортного средства, то позвоните по номеру +79215488514</string>
    <string name="tozapisat">Если Вы желаете записаться на технический осмотр Вашего автомобиля, то позвоните по номеру +78451545925</string>
    <string name="repair">Ремонт</string>
    <string name="repairzapis">Если Вы желаете записаться на ремонт Вашего автомобиля, то позвоните по номеру +78451545925</string>
    <string name="opisrepair">Несвоевременные работы могут привести к ухудшению технического состояния транспортного средства, к уменьшению срока службы машины, а также к небезопасному передвижению в транспортном средстве.</string>
    <string name="opisrepairone">Если Вы не знаете, что поломалось у Вас в автомобиле, то рекомендуем сначала пройти технический осмотр.</string>
    <string name="bmw_f80_m3_competition">Миниатюра BMW F80 M3 COMPETITION LTD ED</string>
    <string name="collectionAccessor">Коллекционные аксессуары</string>
    <string name="bmw_m3_competition_f80_2016">Модель спортивного BMW M3 в исполнении Competition (кузов F80) образца 2016 года. Двери, капот, багажник — открываются.</string>
    <string name="bmw_m8_gran_coupe_ltd_ed">Миниатюра BMW M8 GRAN COUPE LTD ED</string>
    <string name="bmw_m8_gran_coupe_2019">Модель спортивного BMW M8 в исполнении Gran Coupe образца 2019 года. Двери, капот, багажник - открываются</string>
    <string name="bmw_m5_competition">BMW M5 Competition</string>
    <string name="bmw_m8_competition">BMW M8 Competition</string>
    <string name="bmw_m8_cmpot">Мощность двигателя: 625 л.с. Расход топлива: 11,4 л/100км Разгон (0-100 км/ч): 3,2 с Больше информации: bmw.ru</string>
    <string name="bmw_m5_compot">Мощность двигателя: 625 л.с. Расход топлива: 10,6 л/100км Разгон (0–100 км/ч): 3,3 с Больше информации: bmw.ru</string>
    <string name="hello">Здравствуйте!</string>
    <string name="passsword">Пароль</string>
    <string name="emmail">Email</string>
    <string name="buton_add">Добавить</string>
    <string name="dannye_clienta">Данные клиента</string>
    <string name="usluga_i_data">Услуга и дата</string>
    <string name="manager_btn">Менеджер</string>
    <string name="dannye_vivod">Данные</string>
    <string name="usluga_vyvod">Услуга</string>
    <string name="edithelpone">Введите данные</string>
    <string name="egithelptwo">Введите данные</string>
    <string name="zayyavvvki">Заявки</string>
</resources>