<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".services_main">


   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="0dp"
       android:layout_marginEnd="0dp"
       tools:ignore="MissingConstraints">

       <ImageView
           android:id="@+id/iv_back_button1"
           android:layout_width="wrap_content"
           android:layout_height="28dp"
           android:layout_marginTop="19dp"
           android:layout_marginStart="15dp"
           android:src="@drawable/back_vector"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <TextView
           android:id="@+id/uslugi1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_marginStart="8dp"
           android:layout_marginTop="15dp"
           android:layout_toEndOf="@+id/iv_back_button1"
           android:text="@string/uslugione"
           android:textColor="@color/black"
           android:textSize="25sp"
           android:textStyle="normal|bold"
           app:layout_constraintTop_toTopOf="parent" />


       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <ImageView
               android:id="@+id/imageView4"
               android:layout_width="252dp"
               android:layout_height="141dp"
               android:layout_alignParentStart="true"
               android:layout_alignParentTop="true"
               android:layout_alignParentEnd="true"
               android:layout_marginStart="150dp"
               android:layout_marginTop="0dp"
               android:layout_marginEnd="50dp"
               app:srcCompat="@drawable/logotip" />

           <Button
               android:id="@+id/buttonAcsessuary"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_alignParentStart="true"
               android:layout_alignParentEnd="true"
               android:layout_marginStart="30dp"
               android:layout_marginTop="180dp"
               android:layout_marginEnd="25dp"
               android:text="@string/acsessuary"
               android:textAllCaps="false"
               android:textSize="15sp"
               app:backgroundTint="#000000"
               app:cornerRadius="8dp"
               tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

           <Button
               android:id="@+id/buttonZapchasti"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_alignParentStart="true"
               android:layout_alignParentEnd="true"
               android:layout_marginStart="30dp"
               android:layout_marginTop="250dp"
               android:layout_marginEnd="25dp"
               android:text="@string/zapchasti"
               android:textAllCaps="false"
               android:textSize="15sp"
               app:backgroundTint="#000000"
               app:cornerRadius="8dp"
               tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

           <Button
               android:id="@+id/buttonTexOsmotr"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_alignParentStart="true"
               android:layout_alignParentEnd="true"
               android:layout_marginStart="30dp"
               android:layout_marginTop="320dp"
               android:layout_marginEnd="25dp"
               android:text="@string/texOsmotr"
               android:textAllCaps="false"
               android:textSize="15sp"
               app:backgroundTint="#000000"
               app:cornerRadius="8dp"
               tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

           <Button
               android:id="@+id/buttonRemont"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_alignParentStart="true"
               android:layout_alignParentEnd="true"
               android:layout_marginStart="30dp"
               android:layout_marginTop="390dp"
               android:layout_marginEnd="25dp"
               android:text="@string/remont"
               android:textAllCaps="false"
               android:textSize="15sp"
               app:backgroundTint="#000000"
               app:cornerRadius="8dp"
               tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

           <Button
               android:id="@+id/buttonAcsessuaryCpec"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_alignParentStart="true"
               android:layout_alignParentEnd="true"
               android:layout_marginStart="30dp"
               android:layout_marginTop="460dp"
               android:layout_marginEnd="25dp"
               android:text="@string/collectionAcsessuary"
               android:textAllCaps="false"
               android:textSize="15sp"
               app:backgroundTint="#000000"
               app:cornerRadius="8dp"
               tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

           <Button
               android:id="@+id/admin"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:text="@string/manager_btn"
               android:layout_marginTop="520dp"
               android:layout_centerHorizontal="true"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.498"
               app:layout_constraintStart_toStartOf="parent"
               tools:ignore="MissingConstraints"
               android:backgroundTint="@color/black"
               tools:layout_editor_absoluteY="537dp"
               android:padding="10sp"/>
       </RelativeLayout>

   </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>