<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accessories_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_back_button14"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="19dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/uslugi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/iv_back_button14"
            android:text="@string/collectionAccessor"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="normal|bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="252dp"
            android:layout_height="141dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="70dp"
            app:srcCompat="@drawable/logotip" />

        <TextView
            android:id="@+id/contentacsess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alltovary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="210dp"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="245dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200sp"
                android:text="@string/bmw_m8_gran_coupe_ltd_ed"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200sp"
                android:layout_marginTop="40dp"
                android:text="@string/bmw_m8_gran_coupe_2019"
                android:textSize="15sp"
                android:textColor="@color/black"/>


            <ImageView
                android:id="@+id/imageViewPodushka"
                android:layout_width="198dp"
                android:layout_height="115dp"
                app:srcCompat="@drawable/accessor_m8" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200sp"
                android:text="@string/bmw_f80_m3_competition"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200sp"
                android:layout_marginTop="40dp"
                android:text="@string/bmw_m3_competition_f80_2016"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageViewAromatizator"
                android:layout_width="198dp"
                android:layout_height="115dp"
                app:srcCompat="@drawable/accessor_f80m3" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="580dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>