<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accessories_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_back_button2"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="19dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/uslugi15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/iv_back_button2"
            android:text="@string/acsessuaryone"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="normal|bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="252dp"
            android:layout_height="141dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="205dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="50dp"
            app:srcCompat="@drawable/logotip" />

        <TextView
            android:id="@+id/contentacsess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alltovary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="148dp"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="185dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200sp"
                android:text="@string/podushka_cost"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200sp"
                android:layout_marginTop="40dp"
                android:text="@string/podushka_opisanie"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageViewPodushka"
                android:layout_width="198dp"
                android:layout_height="115dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200sp"
                android:text="@string/aromatizator"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageViewAromatizator"
                android:layout_width="198dp"
                android:layout_height="115dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="490dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>